# fast_robot_kinematics

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  fast_forward_kinematics-config.cmake.in  fast_forward_kinematics.cmake  forward_kinematics.cpp  main.cpp  main.py  matrix_exponential.cpp  matrix_exponential.hpp  matrix_exponential_test.cpp  perf_stat  robot.urdf  robot_config.cpp.template  robot_gen.py  speed_test.cpp
.github/workflows/: cmake-single-platform.yml
cmake/: fast_forward_kinematics-extras.cmake
code_generation/: get_num_joints.py  robot_config.cpp.template  robot_config.cu.template  robot_gen.py
include/: fast_inverse_kinematics.hpp  fast_kinematics.hpp  fast_kinematics_joint_data_length.hpp  forward_kinematics.hpp  forward_kinematics_eigen.hpp  inverse_kinematics_eigen.hpp  kdl_kinematics.hpp  kinematics.h  kinematics_interface.hpp  model.h  parse_urdf.h
include/fast_forward_kinematics/: fast_inverse_kinematics.hpp  fast_kinematics.hpp  kinematics_interface.hpp
include/fast_inverse_kinematics/: fast_kinematics.hpp  kinematics_interface.hpp
scripts/: get_num_joints.py  main.py  robot_config.cpp.template  robot_config.cu.template  robot_gen.py
src/: fast_inverse_kinematics.cpp  fast_kinematics.cpp  forward_kinematics.cpp  matrix_exponential.cpp  matrix_exponential_test.cpp
test/: CMakeLists.txt  forward_kinematics_test.cpp  inverse_kinematics_test.cpp  matrix_exponential_test.cpp
test/fetch_content_test/: CMakeLists.txt
test/include/: kdl_kinematics.hpp
test/kdl/: kdl_implementation.cpp
test/urdf/: pr2.urdf  ur5.urdf
